# aws-sso-util

./: Cargo.toml  README.md
src/: aws_profiles.rs  error.rs  main.rs  role_credentials.rs  sso_cache.rs
