[package]
name = "aws-grc"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
ini = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"
