[package]
name = "aws-sso-util"
version = "0.1.0"
edition = "2024"
authors = ["Alexandru Olaru <alxolr@gmail.com>"]
description = "A utility for AWS SSO"
license = "MIT"
repository = "https://github.com/alxolr/aws-sso-util"
homepage = "https://github.com/alxolr/aws-sso-util"
documentation = "https://docs.rs/aws-sso-util"
keywords = ["aws", "sso", "utility"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dirs = "6.0.0"
ini = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
structopt = "0.3.26"
